--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,3 @@
-OPENAI_API_KEY='YOUR_KEY_GOES_HERE'
-ALGOLIA_APP_ID='YOUR_KEY_GOES_HERE'
-ALGOLIA_API_KEY='YOUR_KEY_GOES_HERE'
+OPENAI_API_KEY=''
+ALGOLIA_APP_ID=''
+ALGOLIA_API_KEY=''
