--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@harperdb/nextjs": "^1.1.1",
-    "@hookform/resolvers": "^3.9.0",
+    "@hookform/resolvers": "^5.1.1",
     "@huggingface/transformers": "^3.3.3",
-    "@next/swc-wasm-nodejs": "15.1.6",
+    "@next/swc-wasm-nodejs": "^15.4.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -40,39 +40,38 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@types/node": "20.6.2",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
+    "@types/node": "^24.0.14",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "algoliasearch": "^5.20.1",
-    "autoprefixer": "10.4.15",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
-    "eslint": "8.49.0",
-    "eslint-config-next": "15.1.6",
+    "eslint": "^9.31.0",
+    "eslint-config-next": "^15.4.1",
     "harperdb": "^4.5.1",
     "input-otp": "^1.2.4",
     "instantsearch.css": "^8.5.1",
     "instantsearch.js": "^4.77.3",
-    "lucide-react": "^0.446.0",
-    "next": "15.1.6",
-    "next-themes": "^0.3.0",
-    "openai": "^4.83.0",
-    "postcss": "8.4.30",
-    "react": "18.2.0",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "lucide-react": "^0.525.0",
+    "next": "^15.4.1",
+    "next-themes": "^0.4.6",
+    "openai": "^5.9.1",
+    "react": "^19.1.0",
+    "react-day-picker": "^9.8.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.53.0",
-    "react-resizable-panels": "^2.1.3",
-    "recharts": "^2.12.7",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.2",
+    "react-resizable-panels": "^3.0.3",
+    "recharts": "^3.1.0",
+    "sonner": "^2.0.6",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2",
-    "vaul": "^0.9.9",
-    "zod": "^3.23.8"
+    "typescript": "^5.8.3",
+    "vaul": "^1.1.2",
+    "zod": "^3.25.76"
   }
 }
