--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   },
   "dependencies": {
     "@harperdb/nextjs": "^1.1.1",
-    "@hookform/resolvers": "^5.1.1",
-    "@huggingface/transformers": "^3.3.3",
-    "@next/swc-wasm-nodejs": "^15.4.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -40,22 +37,13 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@types/node": "^24.0.14",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
     "algoliasearch": "^5.20.1",
-    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
-    "eslint": "^9.31.0",
-    "eslint-config-next": "^15.4.1",
     "harperdb": "^4.5.1",
     "input-otp": "^1.2.4",
-    "instantsearch.css": "^8.5.1",
-    "instantsearch.js": "^4.77.3",
     "lucide-react": "^0.525.0",
     "next": "^15.4.1",
     "next-themes": "^0.4.6",
@@ -67,11 +55,18 @@
     "react-resizable-panels": "^3.0.3",
     "recharts": "^3.1.0",
     "sonner": "^2.0.6",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.8.3",
     "vaul": "^1.1.2",
     "zod": "^3.25.76"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "24.0.14",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "eslint": "^9.31.0",
+    "eslint-config-next": "^15.4.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5.8.3"
   }
 }
